--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,14 +1,24 @@
 name: GitHub Actions Demo
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 on: [push]
+# branches: [main]
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
-        uses: actions/setup-java@v3
+      - run: |
+          ls ${{ github.workspace }}
+      - uses: actions/setup-java@v3
         with:
           distribution: 'temurin' # See 'Supported distributions' for available options
           java-version: '17'
-    - run: java HelloWorldApp.java
+          cache: 'maven'
+      - run: |
+          java -version
+      - run: |
+          pwd
+          ls -l
+          ./mvnw -B compile package
+        working-directory: ./backend
