--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,5 +20,6 @@ jobs:
       - run: |
           pwd
           ls -l
+          chmod +x ./mvnw
           ./mvnw -B compile package
         working-directory: ./backend
